@@ -142,10 +142,11 @@
   (interactive)
   (rails-core:in-root
    (message "Creating TAGS, please wait...")
-   (shell-command
-    (format rails-tags-command tags-file-name (rails-core:file "app")))
-   (flet ((yes-or-no-p (p) (y-or-n-p p)))
-     (visit-tags-table tags-file-name))))
+   (let ((tags-file-name (rails-core:file "TAGS")))
+     (shell-command
+      (format rails-tags-command tags-file-name (rails-core:file "app")))
+     (flet ((yes-or-no-p (p) (y-or-n-p p)))
+       (visit-tags-table tags-file-name)))))
 
 (defun rails-run-for-alist(root)
   (let ((ret nil)
